--- a/vins_estimator/CMakeLists.txt
+++ b/vins_estimator/CMakeLists.txt
@@ -3,85 +3,35 @@ project(vins)
 
 set(CMAKE_BUILD_TYPE "Release")
 set(CMAKE_CXX_FLAGS "-std=c++11")
-set(CMAKE_CXX_FLAGS_RELEASE "-O3 -Wall -g")
+set(CMAKE_CXX_FLAGS_RELEASE "-O3 -fPIC -Wall")
 
 include_directories(${CMAKE_SOURCE_DIR}/../camera_models/include)
 add_library( camera_models SHARED IMPORTED )
-set_target_properties(camera_models PROPERTIES IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/../camera_models/build/libcamera_models.so)
+set_target_properties(camera_models PROPERTIES IMPORTED_LOCATION  ${CMAKE_SOURCE_DIR}/../camera_models/build/libcamera_models.so)
 
-
-find_package(catkin REQUIRED COMPONENTS
-    roscpp
-    std_msgs
-    geometry_msgs
-    nav_msgs
-    tf
-    cv_bridge
-    image_transport)
-
-#find_package(OpenCV REQUIRED)
-include(/usr/local/share/OpenCV/OpenCVConfig.cmake)
-#message(WARNING "OpenCV_VERSION: ${OpenCV_VERSION}")
+#include(/usr/local/share/OpenCV/OpenCVConfig.cmake)
+find_package(OpenCV 3 REQUIRED PATHS /usr/local/share/OpenCV NO_DEFAULT_PATH) #when manual built
+include_directories(${OPENCV_INCLUDE_DIRS})
+message(STATUS "    version: ${OpenCV_VERSION}") #check version
 
 find_package(Ceres REQUIRED)
+include_directories(${CERES_INCLUDE_DIRS})
 
-include_directories( include ${catkin_INCLUDE_DIRS} ${CERES_INCLUDE_DIRS})
+find_package(Eigen3 REQUIRED)
+include_directories(${EIGEN3_INCLUDE_DIR})
 
-set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
-find_package(Eigen3)
-include_directories(
-  ${catkin_INCLUDE_DIRS}
-  ${EIGEN3_INCLUDE_DIR}
-  ${OpenCV_INCLUDE_DIRS}
-)
-catkin_package()
-#message(STATUS "OpenCV library status:")
-#message(STATUS "    version: ${OpenCV_VERSION}")
-#message(STATUS "    libraries: ${OpenCV_LIBS}")
-#message(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")
-#message(STATUS "    catkin libraries: ${catkin_LIBRARIES}")
+find_package(Boost REQUIRED COMPONENTS filesystem program_options system)
+include_directories(${Boost_INCLUDE_DIRS})
 
-add_library(vins_lib_gpu SHARED
+include_directories(include # source directory include folder
+    src
+    )
+
+add_library(vio_lib_gpu SHARED
     src/tools.cpp
     )
-target_link_libraries(vins_lib_gpu camera_models camera_models ${OpenCV_LIBS} ${catkin_LIBRARIES}  ${CERES_LIBRARIES})
+target_link_libraries(vio_lib_gpu camera_models ${OpenCV_LIBRARIES} ${CERES_LIBRARIES})
 
-add_executable(vins_node src/rosNodeTest.cpp)
-target_link_libraries(vins_node vins_lib_gpu camera_models)
-
-
-# cmake_minimum_required(VERSION 2.8.3)
-# project(vins)
-
-# set(CMAKE_BUILD_TYPE "Release")
-# set(CMAKE_CXX_FLAGS "-std=c++11")
-# set(CMAKE_CXX_FLAGS_RELEASE "-O3 -fPIC -Wall")# -g -pthread -fopenmp")
-
-# include_directories(${CMAKE_SOURCE_DIR}/../camera_models/include)
-# add_library( camera_models SHARED IMPORTED )
-# set_target_properties(camera_models PROPERTIES IMPORTED_LOCATION  ${CMAKE_SOURCE_DIR}/../camera_models/build/libcamera_models.so)
-
-# find_package(OpenCV REQUIRED)
-# include_directories(${OPENCV_INCLUDE_DIRS})
-
-# find_package(Ceres REQUIRED)
-# include_directories(${CERES_INCLUDE_DIRS})
-
-# find_package(Eigen3 REQUIRED)
-# include_directories(${EIGEN3_INCLUDE_DIR})
-
-# find_package(Boost REQUIRED COMPONENTS filesystem program_options system)
-# include_directories(${Boost_INCLUDE_DIRS})
-
-# include_directories(include # source directory include folder
-#     src
-#     )
-
-# add_library(vins_lib #SHARED
-#     src/tools.cpp
-#     )
-# target_link_libraries(vio_lib_gpu camera_models ${OpenCV_LIBRARIES} ${CERES_LIBRARIES})
-
-# add_executable(vins_estimator
-#     src/main.cpp)
-# target_link_libraries(vins_estimator vio_lib_gpu camera_models ${OpenCV_LIBRARIES} ${CERES_LIBRARIES})
+add_executable(vins_estimator
+    src/main.cpp)
+target_link_libraries(vins_estimator vio_lib_gpu camera_models ${OpenCV_LIBRARIES} ${CERES_LIBRARIES})
