--- a/vins_estimator/package.xml
+++ b/vins_estimator/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <package>
-  <name>vins</name>
+  <name>vio</name>
   <version>0.0.0</version>
   <description>The vins package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="qintonguav@gmail.com">qintong</maintainer>
+  <maintainer email="eungchang_mason@kaist.ac.kr">Mason</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -40,12 +40,12 @@
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend> <!-- only this -->
-  <build_depend>roscpp</build_depend>
+  <!-- <build_depend>roscpp</build_depend>
   <build_depend>image_transport</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>image_transport</run_depend>
-
+ -->
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
