--- a/config/stereo.yaml
+++ b/config/stereo.yaml
@@ -48,8 +48,10 @@ max_cnt: 150            # max feature number in feature tracking
 min_dist: 30            # min distance between two features 
 freq: 30                # frequence (Hz) of publish tracking result. At least 10Hz for good estimation. If set 0, the frequence will be same as raw image 
 F_threshold: 1.0        # ransac threshold (pixel)
-show_track: 0           # publish tracking image as topic
-show_TMI? : 1
+show_track: 1           # publish tracking image as topic
+show_TMI? : 0
+fisheye : 1
+fisheye_mask_path : "/home/usrg/fisheye_mask.jpg"
 flow_back: 1            # perform forward and backward optical flow to improve feature tracking accuracy
 
 #optimization parameters
@@ -67,8 +69,3 @@ g_norm: 9.81007     # gravity magnitude
 #unsynchronization parameters
 estimate_td: 1                      # online estimate time offset between camera and imu
 td: 0.0                             # initial value of time offset. unit: s. readed image clock + td = real image clock (IMU clock)
-
-#loop closure parameters
-#load_previous_pose_graph: 0        # load and reuse previous pose graph; load from 'pose_graph_save_path'
-#pose_graph_save_path: "/home/usrg/config/output/pose_graph/" # save and load path
-#save_image: 1                   # save image in pose graph for visualization prupose; you can close this function by setting 0 
